# promptkit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pk/: __init__.py  cli.py  doctor.py  render.py
templates/audit/: schema.json  template.md
templates/audit/examples/: deep.yaml  default.yaml  fast.yaml
templates/audit/tests/: render_golden.md
templates/ci_cd/: schema.json  template.md
templates/ci_cd/examples/: default.yaml
templates/ci_cd/tests/: render_golden.md
templates/core_spine/: schema.json  template.md
templates/core_spine/examples/: default.yaml
templates/core_spine/tests/: render_golden.md
templates/coverage_critique/: schema.json  template.md
templates/coverage_critique/examples/: default.yaml
templates/coverage_critique/tests/: render_golden.md
templates/failure_modes/: schema.json  template.md
templates/failure_modes/examples/: default.yaml
templates/failure_modes/tests/: render_golden.md
templates/perf_cost/: schema.json  template.md
templates/perf_cost/examples/: default.yaml
templates/perf_cost/tests/: render_golden.md
templates/pr_review/: schema.json  template.md
templates/pr_review/examples/: default.yaml
templates/pr_review/tests/: render_golden.md
templates/readme/: schema.json  template.md
templates/readme/examples/: deep.yaml  default.yaml  fast.yaml
templates/readme/tests/: render_golden.md
templates/refactor_plan/: schema.json  template.md
templates/repo_map/: schema.json  template.md
templates/security/: schema.json  template.md
templates/test_plan/: schema.json  template.md
tests/: __init__.py  test_cli.py  test_doctor.py  test_render.py
(+10 files in other folders)
